--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -148,19 +148,20 @@
       color: #333;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
-      height: 25px;
+      height: 37px;
     }
 
     &[type=submit] {
       background-image: -webkit-linear-gradient(#999, #505050);
       background-image:         linear-gradient(#999, #505050);
       border-radius: 0 5px 5px 0;
-      border: 0;
+      border: 1px solid #666;
+      border-left: 0;
       color: #FFF;
-      height: 23px;
-      line-height: 2em;
+      height:37px;
+      line-height: 37px;
       width: 30%;
-      margin-top: 1px;
+      margin-top:0;
     }
   }
 
@@ -397,6 +398,25 @@
 /* Active Site Menu */
 .active-site-menu .global-nav .nav-container {
   height: 343px;
+}
+
+@media only screen and(min-width:47em) {
+  
+  .gov-bar {
+
+    input[type=search] {
+      height: 25px;
+    }
+
+    
+    input[type=submit] {
+      height: 23px;
+      line-height: 2em;
+      margin-top: 1px;
+    }
+
+  }
+
 }
 
 
