Lined up page content

--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -458,7 +458,7 @@
     background: url(../images/nys-banner-img.png) no-repeat 0 0 transparent;
     display: inline-block;
     float: left;
-    margin: 0;
+    margin: 0 0 0 -1px;
     text-indent: -9999px;
     width: 185px;
   }
@@ -482,7 +482,12 @@
     background: url(../images/nys-banner-img.png) no-repeat 0 -56px transparent;
     display: inline-block;
     float: right;
+    margin-right: 8px;
     width: 150px;
+  }
+
+  .gov-bar .search-container {
+    margin: -1px 9px 0 0;
   }
 
   .gov-bar form {
@@ -524,7 +529,7 @@
   .site-bar a.site-logo {
     font-size: 2em;
     margin: 0 0 0 .3em;
-    padding: 0.4em 0 0 0;
+    padding: 0.4em 0 0 4px;
   }
 
   .site-bar .site-functions {
@@ -547,6 +552,10 @@
     top: 50%;
     margin-top: -36px;
     width: 15em;
+  }
+
+  .site-bar .site-functions .site-search .search-container {
+    margin: 0 2px 0 0;
   }
 
   .site-bar .site-functions .site-search form {
@@ -580,6 +589,10 @@
     border-left: 1px solid transparent;
     border-bottom: none;
     float: left
+  }
+
+  .global-nav ul li:first-child a {
+    padding: 11px 12px 9px 14px;
   }
 
   .global-nav ul li a {
