removed padding from menu back button

--- a/scss/off-canvas.scss
+++ b/scss/off-canvas.scss
@@ -103,7 +103,7 @@ $nav-bar-height: 48px;
       color: #FFF;
       float: right;
       margin: 10px;
-      padding: 7px;
+      padding: 7px 7px 7px 1px;
       visibility: hidden;
     }
 
