Updated css via comopass build

--- a/css/off-canvas.css
+++ b/css/off-canvas.css
@@ -100,7 +100,7 @@
     color: #FFF;
     float: right;
     margin: 10px;
-    padding: 7px;
+    padding: 7px 7px 7px 1px;
     visibility: hidden;
   }
   /* line 110, ../scss/off-canvas.scss */
