--- a/css/excelsior.css
+++ b/css/excelsior.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "IBM437";
 /* normalize.css v2.1.0 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -9399,88 +9399,86 @@ body .joyride-close-tip:hover, .joyride-close-tip:focus {
   background-color: white;
 }
 
-@media only screen {
-  /* Footer */
-  /* line 4, ../scss/excelsior/components/_footer.scss */
-  .footer {
-    width: 100%;
-    background: #282828;
-    bottom: 0;
-    padding: 1em 0;
-    position: relative;
-    z-index: 5;
-  }
-
-  /* line 13, ../scss/excelsior/components/_footer.scss */
-  .footer .footer-links, .footer .footer-images {
-    overflow: hidden;
-  }
-
-  /* line 17, ../scss/excelsior/components/_footer.scss */
-  .footer .footer-images {
-    padding: 0 1.1em;
-  }
-
-  /* line 21, ../scss/excelsior/components/_footer.scss */
-  .footer ul {
-    overflow: hidden;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    float: left;
-  }
-
-  /* line 29, ../scss/excelsior/components/_footer.scss */
-  .footer li {
-    overflow: hidden;
-    padding: 0 2.9em 1.1em 1.1em;
-    font-family: "SourceSansPro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-    float: left;
-  }
-
-  /* line 36, ../scss/excelsior/components/_footer.scss */
-  .footer h4 {
-    font-size: 1.1em;
-    margin-bottom: 0.2em;
-    font-family: "SourceSansPro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-    color: #fff;
-  }
-
-  /* line 43, ../scss/excelsior/components/_footer.scss */
-  .footer li h4 a {
-    color: #fff;
-    text-decoration: none;
-  }
-
-  /* line 48, ../scss/excelsior/components/_footer.scss */
-  .footer li a {
-    font-size: 1em;
-    color: #aaa;
-    text-decoration: none;
-  }
-
-  /* line 54, ../scss/excelsior/components/_footer.scss */
-  .footer li :hover {
-    color: #2ba6cb;
-  }
-
-  /* line 58, ../scss/excelsior/components/_footer.scss */
-  .footer ul li ul li {
-    float: none;
-    padding: 0;
-    margin: 0;
-    line-height: 1.4em;
-  }
-
-  /* line 65, ../scss/excelsior/components/_footer.scss */
-  .footer-line {
-    border-top: 1px solid #333;
-    height: 1px;
-    margin: 0 0 1em 0;
-  }
+/* line 1, ../scss/excelsior/components/_footer.scss */
+.footer {
+  width: 100%;
+  background: #282828;
+  bottom: 0;
+  padding: 1em 0;
+  position: relative;
+  z-index: 5;
 }
+
+/* line 10, ../scss/excelsior/components/_footer.scss */
+.footer .footer-links, .footer .footer-images {
+  overflow: hidden;
+}
+
+/* line 14, ../scss/excelsior/components/_footer.scss */
+.footer .footer-images {
+  padding: 0 1.1em;
+}
+
+/* line 18, ../scss/excelsior/components/_footer.scss */
+.footer ul {
+  overflow: hidden;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+
+/* line 26, ../scss/excelsior/components/_footer.scss */
+.footer li {
+  overflow: hidden;
+  padding: 0 2.9em 1.1em 1.1em;
+  font-family: "SourceSansPro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  float: left;
+}
+
+/* line 33, ../scss/excelsior/components/_footer.scss */
+.footer h4 {
+  font-size: 1.1em;
+  margin-bottom: 0.2em;
+  font-family: "SourceSansPro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  color: #fff;
+}
+
+/* line 40, ../scss/excelsior/components/_footer.scss */
+.footer li h4 a {
+  color: #fff;
+  text-decoration: none;
+}
+
+/* line 45, ../scss/excelsior/components/_footer.scss */
+.footer li a {
+  font-size: 1em;
+  color: #aaa;
+  text-decoration: none;
+}
+
+/* line 51, ../scss/excelsior/components/_footer.scss */
+.footer li :hover {
+  color: #2ba6cb;
+}
+
+/* line 55, ../scss/excelsior/components/_footer.scss */
+.footer ul li ul li {
+  float: none;
+  padding: 0;
+  margin: 0;
+  line-height: 1.4em;
+}
+
+/* line 62, ../scss/excelsior/components/_footer.scss */
+.footer-line {
+  border-top: 1px solid #333;
+  height: 1px;
+  margin: 0 0 1em 0;
+}
+
 @media only screen and (min-width: 48em) {
-  /* line 74, ../scss/excelsior/components/_footer.scss */
+  /* line 70, ../scss/excelsior/components/_footer.scss */
   .footer .footer-links, .footer .footer-images {
     overflow: hidden;
     margin: 0 auto;
