--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -152,6 +152,7 @@
     }
 
     &[type=submit] {
+      background-color: #505050;
       background-image: -webkit-linear-gradient(#999, #505050);
       background-image:         linear-gradient(#999, #505050);
       border-radius: 0 5px 5px 0;
