--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -154,6 +154,7 @@
     &[type=submit] {
       background-image: -webkit-linear-gradient(#999, #505050);
       background-image:         linear-gradient(#999, #505050);
+      background: #505050;
       border-radius: 0 5px 5px 0;
       border: 1px solid #666;
       border-left: 0;
