--- a/scss/excelsior/components/_lists.scss
+++ b/scss/excelsior/components/_lists.scss
@@ -48,15 +48,17 @@
     display: block;
     padding: 7px;
     position: relative;
-    margin-top:  -40px;
+    margin-top:  -39px;
   }
 
+/* I believe this was hacked in to force a demo to work properly, will need to test fully
+  
   .image-to-list li.large-3:nth-child(5n),
   .image-to-list li.small-3:nth-child(5n) {
     float: left;
     clear: both !important;
   }
-
+*/
   .image-to-list li[class*="large-"]:last-child,
   .image-to-list li[class*="small-"]:last-child {
     float: left; // Foundation override
