--- a/scss/foundation/components/_buttons.scss
+++ b/scss/foundation/components/_buttons.scss
@@ -13,7 +13,7 @@ $button-display:          inline-block !default;
 $button-margin-bottom:    emCalc(20px) !default;
 
 // We use these to control button text styles.
-$button-font-family:      "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
+$button-font-family:      inherit !default;
 $button-font-color:       #fff !default;
 $button-font-color-alt:   #333 !default;
 $button-font-med:         emCalc(16px) !default;
@@ -67,9 +67,9 @@ $button-disabled-opacity: 0.6 !default;
   // these can be turned off by setting $padding:false
   @if $padding {
     padding-top: $padding;
-    padding-right: $padding * 2;
+    padding-#{$opposite-direction}: $padding * 2;
     padding-bottom: $padding + emCalc(1px);
-    padding-left: $padding * 2;
+    padding-#{$default-float}: $padding * 2;
 
     // We control the font-size based on mixin input.
     @if      $padding == $button-med { font-size: $button-font-med; }
@@ -82,9 +82,9 @@ $button-disabled-opacity: 0.6 !default;
   // We can set $full-width:true to remove side padding extend width.
   @if $full-width {
     padding-top: $padding;
-    padding-right: 0px;
+    padding-#{$opposite-direction}: 0px;
     padding-bottom: $padding + emCalc(1px);
-    padding-left: 0px;
+    padding-#{$default-float}: 0px;
     width: 100%;
   }
 
