--- a/css/excelsior.css
+++ b/css/excelsior.css
@@ -249,7 +249,7 @@ figure {
  */
 /* line 253, ../scss/normalize.scss */
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid silver;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -2163,7 +2163,7 @@ blockquote p {
   /* line 374, ../scss/foundation/components/_type.scss */
   * {
     background: transparent !important;
-    color: #000 !important;
+    color: black !important;
     /* Black prints faster: h5bp.com/s */
     box-shadow: none !important;
     text-shadow: none !important;
@@ -2195,7 +2195,7 @@ blockquote p {
   /* line 393, ../scss/foundation/components/_type.scss */
   pre,
   blockquote {
-    border: 1px solid #999;
+    border: 1px solid #999999;
     page-break-inside: avoid;
   }
 
@@ -2930,7 +2930,7 @@ form.custom .custom.dropdown {
   background: white;
   background: -moz-linear-gradient(top, white 0%, #f3f3f3 100%);
   background: -webkit-linear-gradient(top, white 0%, #f3f3f3 100%);
-  background: linear-gradient(to bottom, #ffffff 0%, #f3f3f3 100%);
+  background: linear-gradient(to bottom, white 0%, #f3f3f3 100%);
   -webkit-box-shadow: none;
   box-shadow: none;
   font-size: 0.875em;
@@ -4290,7 +4290,7 @@ form.custom .custom.disabled {
   right: 0px;
   width: 11px;
   height: 14px;
-  border: solid 4px #000;
+  border: solid 4px black;
   border-top: none;
   border-bottom: none;
 }
@@ -4301,7 +4301,7 @@ form.custom .custom.disabled {
   width: 11px;
   height: 14px;
   border: solid 8px;
-  border-color: transparent transparent transparent #000;
+  border-color: transparent transparent transparent black;
 }
 /* line 111, ../scss/foundation/components/_orbit.scss */
 .orbit-container:hover .orbit-timer > span {
@@ -4376,7 +4376,7 @@ form.custom .custom.disabled {
   background: #fff;
   float: left;
   margin-right: 6px;
-  border: solid 2px #000;
+  border: solid 2px black;
   -webkit-border-radius: 1000px;
   border-radius: 1000px;
 }
@@ -4627,11 +4627,11 @@ form.custom .custom.disabled {
   text-decoration: none;
   font-size: 30px;
   font-weight: normal;
-  line-height: .5 !important;
+  line-height: 0.5 !important;
 }
 /* line 144, ../scss/foundation/components/_joyride.scss */
 .joyride-close-tip:hover, .joyride-close-tip:focus {
-  color: #eee !important;
+  color: #eeeeee !important;
 }
 
 /* line 147, ../scss/foundation/components/_joyride.scss */
@@ -4654,9 +4654,9 @@ form.custom .custom.disabled {
   position: absolute;
   border-radius: 3px;
   z-index: 102;
-  -moz-box-shadow: 0px 0px 30px #ffffff;
-  -webkit-box-shadow: 0px 0px 15px #ffffff;
-  box-shadow: 0px 0px 15px #ffffff;
+  -moz-box-shadow: 0px 0px 30px white;
+  -webkit-box-shadow: 0px 0px 15px white;
+  box-shadow: 0px 0px 15px white;
 }
 
 /* line 170, ../scss/foundation/components/_joyride.scss */
@@ -5559,7 +5559,7 @@ kbd {
     background: white;
     background: -moz-linear-gradient(top, white 0%, #f2f2f2 100%);
     background: -webkit-linear-gradient(top, white 0%, #f2f2f2 100%);
-    background: linear-gradient(to bottom, #ffffff 0%, #f2f2f2 100%);
+    background: linear-gradient(to bottom, white 0%, #f2f2f2 100%);
     -webkit-box-shadow: 2px 0 10px 0 rgba(0, 0, 0, 0.07), 1000px 0 0 1000px #e1f5d1, -2px 0 10px 0 rgba(0, 0, 0, 0.07), -1000px 0 0 1000px whitesmoke;
     box-shadow: 2px 0 10px 0 rgba(0, 0, 0, 0.07), 1000px 0 0 980px #e1f5d1, -2px 0 10px 0 rgba(0, 0, 0, 0.07), -1000px 0 0 1000px whitesmoke;
   }
@@ -5568,7 +5568,7 @@ kbd {
     background: white;
     background: -moz-linear-gradient(top, white 0%, #e6e6e6 100%);
     background: -webkit-linear-gradient(top, white 0%, #e6e6e6 100%);
-    background: linear-gradient(to bottom, #ffffff 0%, #e6e6e6 100%);
+    background: linear-gradient(to bottom, white 0%, #e6e6e6 100%);
   }
   /* line 193, ../scss/foundation/components/_switch.scss */
   div.switch:active {
@@ -6387,20 +6387,20 @@ section .title a:hover,
 /* line 396, ../scss/excelsior/_foundation-override.scss */
 .orbit-container .orbit-timer > span {
   top: 16px;
-  border: solid 4px #fff;
+  border: solid 4px white;
   border-top: 0;
   border-bottom: 0;
 }
 /* line 403, ../scss/excelsior/_foundation-override.scss */
 .orbit-container .orbit-timer.paused > span {
-  border-color: transparent transparent transparent #fff;
+  border-color: transparent transparent transparent white;
   top: 16px;
 }
 
 /* line 410, ../scss/excelsior/_foundation-override.scss */
 .orbit-bullets li {
   background-color: #eee;
-  box-shadow: inset 0 1px 1px 1px #333;
+  box-shadow: inset 0 1px 1px 1px #333333;
   cursor: pointer;
   border: 0;
 }
@@ -6408,7 +6408,7 @@ section .title a:hover,
 /* line 416, ../scss/excelsior/_foundation-override.scss */
 .orbit-bullets li.active {
   background-color: #444;
-  box-shadow: inset 0 1px 1px 1px #111;
+  box-shadow: inset 0 1px 1px 1px #111111;
 }
 
 /* line 420, ../scss/excelsior/_foundation-override.scss */
@@ -7345,7 +7345,7 @@ tbody tr.info > td {
   text-decoration: none;
   background-color: #f5f5f5;
   background-image: -webkit-linear-gradient(top, white, #e6e6e6);
-  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, white, #e6e6e6);
   background-repeat: repeat-x;
   border-color: #e6e6e6 #e6e6e6 #bfbfbf;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -7395,7 +7395,7 @@ button.button {
 
 /* line 45, ../scss/excelsior/components/_buttons.scss */
 .button:focus {
-  outline: thin dotted #333;
+  outline: thin dotted #333333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -7641,7 +7641,7 @@ input[type="button"].button-block {
   background-image: -webkit-linear-gradient(top, #444444, #222222);
   background-image: linear-gradient(to bottom, #444444, #222222);
   background-repeat: repeat-x;
-  border-color: #222222 #222222 #000000;
+  border-color: #222222 #222222 black;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
@@ -7709,7 +7709,7 @@ input[type="submit"].button::-moz-focus-inner {
   font-weight: bold;
   line-height: 20px;
   color: #000000;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 white;
   opacity: 0.2;
   border: none;
   text-decoration: none;
@@ -7751,7 +7751,7 @@ button.close {
   text-decoration: none;
   background-color: #f5f5f5;
   background-image: -webkit-linear-gradient(top, white, #e6e6e6);
-  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, white, #e6e6e6);
   background-repeat: repeat-x;
   border-color: #e6e6e6 #e6e6e6 #bfbfbf;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -7874,8 +7874,8 @@ input[type="color"] {
   background-color: #ffffff;
   border: 1px solid #cccccc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border linear .2s, box-shadow linear .2s;
-  transition: border linear .2s, box-shadow linear .2s;
+  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+  transition: border linear 0.2s, box-shadow linear 0.2s;
 }
 
 /* line 119, ../scss/excelsior/components/_forms.scss */
@@ -7947,7 +7947,7 @@ select:focus,
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  outline: thin dotted #333;
+  outline: thin dotted #333333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
@@ -8210,9 +8210,9 @@ select:focus:invalid:focus {
   font-weight: normal;
   line-height: 20px;
   text-align: center;
-  text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 white;
   background-color: #eeeeee;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
 }
 
 /* line 404, ../scss/excelsior/components/_forms.scss */
@@ -8338,7 +8338,7 @@ select:focus:invalid:focus {
 
 /* line 1, ../scss/excelsior/components/_demo-bar.scss */
 #resize-bar-body {
-  background: #333333 !important;
+  background: #333!important;
 }
 
 /* line 5, ../scss/excelsior/components/_demo-bar.scss */
@@ -8348,9 +8348,9 @@ select:focus:invalid:focus {
 
 /* line 8, ../scss/excelsior/components/_demo-bar.scss */
 #wrapper {
-  -webkit-transition: height 1250ms ease,width 1250ms ease,margin 1250ms ease;
-  transition: height 1250ms ease,width 1250ms ease,margin 1250ms ease;
-  box-shadow: 0 0 12px 1px #000;
+  -webkit-transition: height 1250ms ease, width 1250ms ease, margin 1250ms ease;
+  transition: height 1250ms ease, width 1250ms ease, margin 1250ms ease;
+  box-shadow: 0 0 12px 1px black;
   -webkit-transform: translate3d(0, 0, 0);
   position: relative;
   background-color: #FFF;
@@ -8651,26 +8651,26 @@ header .keyboard a, header .cssrefresh a {
 /*  Try to separate out Joyride CSS*/
 /* line 283, ../scss/excelsior/components/_demo-bar.scss */
 .joyride-tip-guide {
-  background: #dedede !important;
-  color: #333333 !important;
-  top: 60px !important;
-  text-shadow: none !important;
-  box-shadow: 0 0 4px #666;
+  background: #DEDEDE!important;
+  color: #333!important;
+  top: 60px!important;
+  text-shadow: none!important;
+  box-shadow: 0 0 4px #666666;
   /* Typography */
 }
 /* line 290, ../scss/excelsior/components/_demo-bar.scss */
 .joyride-tip-guide .joyride-nub.top {
-  border-color: transparent transparent #DEDEDE !important;
+  border-color: transparent transparent #dedede !important;
 }
 /* line 295, ../scss/excelsior/components/_demo-bar.scss */
 .joyride-tip-guide h1, .joyride-tip-guide h2, .joyride-tip-guide h3, .joyride-tip-guide h4, .joyride-tip-guide h5, .joyride-tip-guide h6 {
-  color: #333333 !important;
+  color: #333!important;
   margin-bottom: 0.5em;
 }
 
 /* line 301, ../scss/excelsior/components/_demo-bar.scss */
 body .joyride-close-tip:hover, .joyride-close-tip:focus {
-  color: #000 !important;
+  color: black !important;
 }
 
 /* line 305, ../scss/excelsior/components/_demo-bar.scss */
@@ -8781,7 +8781,7 @@ body .joyride-close-tip:hover, .joyride-close-tip:focus {
 
 /* line 62, ../scss/excelsior/components/_footer.scss */
 .footer-line {
-  border-top: 1px solid #333;
+  border-top: 1px solid #333333;
   height: 1px;
   margin: 0 0 1em 0;
 }
@@ -8841,14 +8841,14 @@ body .joyride-close-tip:hover, .joyride-close-tip:focus {
 /* line 37, ../scss/excelsior/components/_lightbox.scss */
 .orbit-bullets li {
   background-color: #eee;
-  box-shadow: inset 0 1px 1px 1px #333;
+  box-shadow: inset 0 1px 1px 1px #333333;
   cursor: pointer;
   border: 0;
 }
 /* line 43, ../scss/excelsior/components/_lightbox.scss */
 .orbit-bullets li.active {
   background-color: #444;
-  box-shadow: inset 0 1px 1px 1px #111;
+  box-shadow: inset 0 1px 1px 1px #111111;
 }
 
 /* line 52, ../scss/excelsior/components/_lightbox.scss */
@@ -8942,10 +8942,9 @@ body .joyride-close-tip:hover, .joyride-close-tip:focus {
   .image-to-list li.large-3:nth-child(5n),
   .image-to-list li.small-3:nth-child(5n) {
     float: left;
-    clear: both !important;
   }
 
-  /* line 61, ../scss/excelsior/components/_lists.scss */
+  /* line 60, ../scss/excelsior/components/_lists.scss */
   .image-to-list li[class*="large-"]:last-child,
   .image-to-list li[class*="small-"]:last-child {
     float: left;
@@ -9070,8 +9069,8 @@ body .joyride-close-tip:hover, .joyride-close-tip:focus {
   height: 300px;
   width: 100%;
   margin-bottom: 1em;
-  border: 1px solid #999;
-  box-shadow: 0 0 3px #999;
+  border: 1px solid #999999;
+  box-shadow: 0 0 3px #999999;
 }
 
 /* POC Styles */
@@ -9083,7 +9082,7 @@ body {
 
 /* line 8, ../scss/excelsior/components/_navigation.scss */
 a:focus {
-  outline: 1px dotted #fc6;
+  outline: 1px dotted #ffcc66;
 }
 
 /* Highjacked icon font to create after arrows */
@@ -9102,7 +9101,7 @@ a:focus {
   clip: rect(0, 0, 0, 0);
   background: rgba(0, 0, 0, 0.5);
   border-radius: 3px;
-  border: 1px solid #FFF;
+  border: 1px solid white;
   display: inline-block;
   padding: 5px;
   top: 10px;
@@ -9112,7 +9111,7 @@ a:focus {
 /* line 33, ../scss/excelsior/components/_navigation.scss */
 .skip-to:focus {
   clip: auto;
-  outline: 1px solid #FFF;
+  outline: 1px solid white;
   z-index: 100;
 }
 
@@ -9120,7 +9119,7 @@ a:focus {
 .gov-pull-down-container {
   background: #036;
   border-radius: 0 0 5px 5px;
-  box-shadow: 1px 0px 2px #000;
+  box-shadow: 1px 0px 2px black;
   height: 40px;
   width: 44px;
   margin: 0 5px 8px;
@@ -9219,7 +9218,7 @@ a:focus {
 .gov-bar input {
   border-radius: 4px;
   -webkit-appearance: none;
-  border: 1px solid #666;
+  border: 1px solid #666666;
   padding: 0;
   display: block;
   float: left;
@@ -9242,7 +9241,7 @@ a:focus {
   background-image: linear-gradient(#999999, #505050);
   background: #505050;
   border-radius: 0 5px 5px 0;
-  border: 1px solid #666;
+  border: 1px solid #666666;
   border-left: 0;
   color: #FFF;
   height: 37px;
@@ -9290,7 +9289,7 @@ a:focus {
 /* line 205, ../scss/excelsior/components/_navigation.scss */
 .site-bar .site-functions .site-search {
   background: #fff;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid #666666;
   box-shadow: none;
   display: block;
   height: 0;
@@ -9385,7 +9384,7 @@ a:focus {
 /* line 289, ../scss/excelsior/components/_navigation.scss */
 .site-bar .mobile-functions li {
   float: left;
-  border-left: 1px solid #666;
+  border-left: 1px solid #666666;
 }
 
 /* line 294, ../scss/excelsior/components/_navigation.scss */
@@ -9436,8 +9435,8 @@ a:focus {
 
 /* line 336, ../scss/excelsior/components/_navigation.scss */
 .global-nav ul li {
-  border-right: 1px solid #444;
-  border-bottom: 1px solid #444;
+  border-right: 1px solid #444444;
+  border-bottom: 1px solid #444444;
 }
 
 /* line 341, ../scss/excelsior/components/_navigation.scss */
@@ -9447,7 +9446,7 @@ a:focus {
   display: block;
   font-size: 1.15em;
   padding: 11px 12px 9px 12px;
-  text-shadow: 1px 1px 1px #111;
+  text-shadow: 1px 1px 1px #111111;
 }
 
 /* Page Contents */
@@ -9533,7 +9532,7 @@ a:focus {
   /* line 421, ../scss/excelsior/components/_navigation.scss */
   .gov-bar {
     background: #036;
-    border-bottom: 1px solid #555;
+    border-bottom: 1px solid #555555;
     position: relative;
     -webkit-transition: height 0s ease;
     transition: height 0s ease;
@@ -9647,7 +9646,7 @@ a:focus {
   /* line 526, ../scss/excelsior/components/_navigation.scss */
   .site-bar a.site-logo {
     font-size: 2em;
-    margin: 0 0 0 .3em;
+    margin: 0 0 0 0.3em;
     padding: 0.4em 0 0 4px;
   }
 
@@ -9884,7 +9883,7 @@ a:focus {
   text-decoration: none;
   font-family: Georgia, "Times New Roman", serif;
   font-size: 120%;
-  text-shadow: 0.2em 0.2em 0.2em #333;
+  text-shadow: 0.2em 0.2em 0.2em #333333;
   padding: 0.8em 0 0.4em 0;
 }
 /* line 29, ../scss/excelsior/components/_components.scss */
@@ -9909,12 +9908,12 @@ a:focus {
 }
 /* line 48, ../scss/excelsior/components/_components.scss */
 .govbutton .button {
-  border: 1px solid #222;
+  border: 1px solid #222222;
 }
 /* line 51, ../scss/excelsior/components/_components.scss */
 .govbutton .button:hover {
   background-color: #162252;
-  border: 1px solid #444;
+  border: 1px solid #444444;
 }
 
 @media screen and (max-width: 768px) {
