--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -602,6 +602,7 @@
   .global-nav .nav-container ul li a.active {
     border: none;
     background-color: #888;
+    padding-right: 44px;
   }
 
   .global-nav .nav-container ul li a:hover {
