Off canvas mq fix

--- a/less/off-canvas.less
+++ b/less/off-canvas.less
@@ -162,13 +162,13 @@
 
 // 960px and up
 @media only screen and (min-width: @large-screen) {
-	.global-nav .nav-container {
-    .border-radius(4px);
+  .global-nav .nav-container {
+        .border-radius(4px);
   }
 }
 
 /* Medium Displays: 768px - 1279px */
-@media only screen and (min-width: @small-screen) {
+@media only screen and (min-width: @medium-screen) {
 
   body.off-canvas {
     padding-top: 0;
