"Do not edit" comments

--- a/src/less/foundation/foundation.less
+++ b/src/less/foundation/foundation.less
@@ -1,3 +1,8 @@
+/* ************************************** */
+/* THIS IS A COPY OF FOUNDATION 4.1.2 CSS */
+/*             DO NOT EDIT                */
+/* ************************************** */
+
 /* line 4, ../scss/foundation/components/_global.scss */
 *,
 *:before,
