--- a/src/less/foundation/normalize.less
+++ b/src/less/foundation/normalize.less
@@ -1,3 +1,8 @@
+/* ************************************* */
+/* THIS IS A COPY OF NORMALIZE 2.1.0 CSS */
+/*             DO NOT EDIT               */
+/* ************************************* */
+
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
 /* ==========================================================================
